4.0.8201 Fixed focus beeing set twice when updating attributes from result Added Time and NullableTime to QueryColumn.prototype.render Fixed persistent object with reference template when lookup has no read Check for isVisible on Query.hasVisibleActions() Show notification for successfull/failed template parsing Log failed template parsing Fixed BinaryFile Fixed changing Image on IE Use same logic for Browse Certificate on Windows Azure PO Fixed issue with mobile

--- a/Web/Vidyano.less
+++ b/Web/Vidyano.less
@@ -1602,11 +1602,12 @@ ul.programUnitItemsOverflow {
 	margin-left: 2px;
 }
 
-.persistentObjectAttribute_Edit_Image .persistentObjectAttributefileInput {
+.persistentObjectAttributefileInput {
     cursor: pointer;
+	width: 24px;
 }
 
-.persistentObjectAttribute_Edit_Image .persistentObjectAttributefileInputWrapper {
+.persistentObjectAttributefileInputWrapper {
     position: absolute;
     -moz-opacity: 0;
     opacity: 0;
